@@ -70,9 +70,13 @@
  
 static void ffi_prep_args (unsigned char *, extended_cif *);
 static int ffi_check_float_struct (ffi_type *);
-void ffi_closure_helper_SYSV (ffi_closure *, unsigned long *, 
-			      unsigned long long *, unsigned long *);
- 
+void
+#if __GNUC__ > 3 || (__GNUC__ == 3 && __GNUC_MINOR__ > 1)
+__attribute__ ((visibility ("hidden")))
+#endif
+ffi_closure_helper_SYSV (ffi_closure *, unsigned long *, 
+			 unsigned long long *, unsigned long *);
+
 /*====================== End of Prototypes ===========================*/
  
 /*====================================================================*/
